# buddy-system

./: Cargo.toml  README.md
src/: arena.rs  buddy.rs  lib.rs
