[package]
name = "buddy-system"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simple buddy system allocator for real-time usecases"
repository = "https://github.com/smj-edison/buddy-system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.9"
